address-api/infra/service.yml
apiVersion: v1
kind: Service
metadata:
  name: address-service
  namespace: dev
  labels:
    app: address-service
    service: address-service
spec:
  ports:
  - port: 8081
    name: http
  selector:
    app: address-deployment
