address-api/infra/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: person
spec:
  hosts:
  - "*"
  gateways:
  - address-ingressgateway
  http:
  - match:
    - uri:
        prefix: /address-api
    rewrite:
      uri: /
    route:
    - destination:
        host: address-service.dev.svc.cluster.local
        port:
          number: 8081
